Second times the charm

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./project.css"/>
+    <title>Phase 1: Game Temp Title</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <img class="h-64 border-solid border-8 rounded-full border-red-900"
+    src="ui\public\fox_tree_logo.webp" alt="Tree Logo" />
   </body>
-</html>
+
+  </html>
