--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <img class="h-64 border-solid border-8 rounded-full border-red-900"
-    src="ui\public\fox_tree_logo.webp" alt="Tree Logo" />
+    src="./fox_tree_logo.png" alt="Tree Logo" />
   </body>
 
   </html>
