--- a/ui/index.html
+++ b/ui/index.html
@@ -1,3 +1,5 @@
+<!-- HTML Template file - DO NOT EDIT -->
+ 
 <!doctype html>
 
 <html lang="en">
@@ -5,16 +7,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="./project.css"/>
-    <title>Phase 1: Game Temp Title</title>
+    <title>Mobile App Development Project</title>
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <img class="h-64 border-solid border-8 rounded-full border-red-900"
-    src="./fox_tree_logo.png" alt="Tree Logo" />
   </body>
 
   </html>
